# simple-api-server-with-full-ci

./: .dockerignore  .gitignore  CODE_WALKTHROUGH.md  Dockerfile  README.md  SETUP.md  deployments.yml  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-test.yml  ci.yml
app/: config.py  main.py
app/api/: dependencies.py  routes.py
app/models/: gist.py
app/services/: github.py
tests/: fun_code.py  test_api.py  test_dependencies_and_service.py  test_service_integration.py
