[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ee-gists-api"
version = "0.1.0"
description = "Simple API to list a user's public GitHub gists"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Candidate"}]
license = {text = "MIT"}
keywords = ["fastapi", "github", "gists"]
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "pydantic>=2.7",
  "cachetools>=5.3",
  "tenacity>=8.2",
  "prometheus_client>=0.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "mypy>=1.10",
  "types-cachetools",
  "types-requests",
  "respx>=0.21",
]

[tool.pytest.ini_options]
addopts = "-q --cov=app --cov-report=term-missing:skip-covered --cov-fail-under=98"
asyncio_mode = "auto"
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
extend-select = ["I"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = []
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["app"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*"]
